[tool.poetry]
name = "hayaml"
version = "0.0.0"
description = "Manage Home Assistant integrations through the config file"
authors = ["Will Hughes <will@willhughes.name>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
homeassistant = ""

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
multi_line_output=3
include_trailing_comma=true
